turtleart.lessons.turtleart.Main.SmallSquare.scala.code
override def run() {
baisseCrayon()
avance()
avance()
}
